转移之前的文章

--- a/_posts/2017-02-21-网站性能优化.MD
+++ b/_posts/2017-02-21-网站性能优化.MD
@@ -1,29 +1,57 @@
-# 网站性能优化01.
+---
+layout: post
+title: "网站性能优化"
+date: 2016-12-13
+excerpt: "网站性能优化的简要总结"
+tags: [web, 学习, 前端]
+comments: true
+---
+
+# 网站性能优化.
 
 一个体验良好的网站应该能尽可能快地将页面展示给用户，减少用户等待的时间，也就是说要尽量减少浏览器渲染出页面的时间。
 
 首先简单介绍下浏览器的渲染过程：
+
 浏览器要在屏幕上渲染内容，首先要构建DOM树和CSSOM树；然后浏览器给每个可见节点找到相应匹配的CSSOM规则，并应用这些规则，将两者合成渲染树；在有了这些信息后，浏览器就可以通过这些信息进行计算，最终得到展现在用户面前的样子。
 
 可以从三个方面来减少页面渲染时间：
-## 1、减小文件体积。
-  源码:
-    a.上线时，去掉开发时的注释与空格。
-    b.采用grunt、gulp等工具进行文件的压缩。
-  服务器端：
-    a.可以选用GZip进行文本(html,css,js文件)的压缩。
-    b.采用http缓存。
-## 2、减少请求数量。
-  合并必要的js和css文件。
-## 3、减少阻塞渲染的时间。
-  a.减少css对渲染的阻塞:
-  由于浏览器需要在构建好CSSOM后才会进行渲染，在CSSOM构建完成前，浏览器会暂停渲染任何已处理的内容。所以要尽量精简css，并尽快传给浏览器。
-  对于一些只在特定条件下使用的css，可以采用媒体查询来使得这些资源不阻塞渲染。例如一些用于页面打印的样式可以采用：
-  &ltlink href="print.css" rel="stylesheet" media="print"&gt
-  这样在页面首次加载时，print.css就不会阻塞渲染。
+## 1. 减小文件体积。
 
-  b.减少javascript对渲染的阻塞：
-  在一般情况下，当浏览器遇到script标签时，会先运行里面的js代码，然后再继续进行下一步渲染工作。
-  对于这种情况，可以将不对DOM和CSS进行修改的js文件的script标签里面加入async或defer，来异步加载该js文件。
-  例如：&ltscript src="app.js" async&gt&lt/script&gt
-  (defer和async的区别在于：defer是异步下载文件，在页面解析完成之后执行；async是异步下载，下载完成之后立刻执行)
+源码:
+
+1. 上线时，去掉开发时的注释与空格。
+2. 采用grunt、gulp等工具进行文件的压缩。
+
+服务器端：
+
+1. 可以选用GZip进行文本(html,css,js文件)的压缩。
+2. 采用http缓存。
+
+## 2. 减少请求数量。
+
+  合并必要的js和css文件。
+
+## 3. 减少阻塞渲染的时间。
+
+**减少css对渲染的阻塞:**
+
+由于浏览器需要在构建好CSSOM后才会进行渲染，在CSSOM构建完成前，浏览器会暂停渲染任何已处理的内容。所以要尽量精简css，并尽快传给浏览器。
+
+对于一些只在特定条件下使用的css，可以采用媒体查询来使得这些资源不阻塞渲染。例如一些用于页面打印的样式可以采用：
+
+    <link href="print.css" rel="stylesheet" media="print">
+
+这样在页面首次加载时，print.css就不会阻塞渲染。
+
+**减少javascript对渲染的阻塞：**
+
+在一般情况下，当浏览器遇到script标签时，会先运行里面的js代码，然后再继续进行下一步渲染工作。
+
+对于这种情况，可以将不对DOM和CSS进行修改的js文件的script标签里面加入async或defer，来异步加载该js文件。
+
+例如：
+
+    <script src="app.js" async></script>
+
+(defer和async的区别在于：defer是异步下载文件，在页面解析完成之后执行；async是异步下载，下载完成之后立刻执行)
